# rust-bitcoin-core-miniscript-ffi

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cpp/: descriptor_wrapper.cpp  descriptor_wrapper.h  miniscript_wrapper.cpp  miniscript_wrapper.h  stubs.cpp
src/: descriptor.rs  lib.rs
tests/: miniscript_tests.rs
tests/unit/: common.rs  complex_miniscripts.rs  descriptor_basic.rs  descriptor_bip32.rs  descriptor_complex.rs  descriptor_decode_test.rs  descriptor_parsing.rs  descriptor_timelocks.rs  descriptor_validation.rs  descriptor_wrappers.rs  edge_cases.rs  mod.rs  resource_limits.rs  satisfaction_tests.rs  tapscript_tests.rs  validity_tests.rs
